# comic-universe-tauri

./: .env.development  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
scripts/: export-legacy-cbz.mjs  sync-chapter-has-offline.mjs
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/application/: mod.rs
src-tauri/src/bootstrap/: app_paths.rs  mod.rs  system.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: migrations.rs  mod.rs
src-tauri/src/presentation/: dto.rs  mod.rs
src/assets/: index.ts
src/components/: index.ts
src/components/AppBridges/: ApiEndpointBridge.tsx  index.ts
src/components/BgBox/: BgBox.tsx  index.ts
src/hooks/: index.ts  useReaderController.ts
src/i18n/: authErrorMessages.ts  index.ts  pt-BR.ts
src/providers/: ThemeProvider.tsx  WallpaperProvider.tsx  WindowProvider.tsx  index.ts
src/routes/: index.tsx
src/services/: accountSessionQueries.ts  index.ts  restClient.ts  restQueries.ts  websiteAuthClient.ts  websiteAuthQueries.ts  workModel.ts
src/stores/: AppStore.tsx  index.ts
src/style/: animations.css  base.css  fonts.css  foundation.css  style.css  tokens.css
src/template/: Home.tsx  LeftList.tsx  LeftNav.tsx  MainContent.tsx  Reader.tsx  TopBar.tsx  index.ts
src/windows/: TestWindow.tsx  index.ts
(+78 files in other folders)
